err/pyjamas-desktop.err
Listing '.'...
Listing './bin'...
Compiling './bin/pyjd.py'...
***   File "./bin/pyjd.py", line 32
    print m
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pyjamas_Desktop-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyjamas'...
Compiling './lib/python3.5/site-packages/pyjamas/Cookies.py'...
***   File "./lib/python3.5/site-packages/pyjamas/Cookies.py", line 19
    print "getCookie2", cookiestr, "name", cookie_name, "val", cs
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyjamas/CountryListBox.py'...
***   File "./lib/python3.5/site-packages/pyjamas/CountryListBox.py", line 7
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xc5 in position 0: unexpected end of data

Compiling './lib/python3.5/site-packages/pyjamas/DOM.py'...
***   File "./lib/python3.5/site-packages/pyjamas/DOM.py", line 51
    print "cap", dir(evt), cap
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyjamas/HTTPRequest.py'...
***   File "./lib/python3.5/site-packages/pyjamas/HTTPRequest.py", line 30
    print "headers", xmlHttp.get_all_response_headers()
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyjamas/History.py'...
***   File "./lib/python3.5/site-packages/pyjamas/History.py", line 7
    print "history: TODO"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyjamas/PyJSONService.py'...
***   File "./lib/python3.5/site-packages/pyjamas/PyJSONService.py", line 62
    print "resp", resp
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyjamas/Timer.py'...
***   File "./lib/python3.5/site-packages/pyjamas/Timer.py", line 7
    print "Timer arg count", notify.onTimer.func_code.co_argcount
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyjamas/Window.py'...
***   File "./lib/python3.5/site-packages/pyjamas/Window.py", line 27
    print "TODO", msg
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyjamas/__pyjamas__.py'...
***   File "./lib/python3.5/site-packages/pyjamas/__pyjamas__.py", line 40
    print "code", code
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyjamas/pygwt.py'...
***   File "./lib/python3.5/site-packages/pyjamas/pygwt.py", line 20
    print "TODO"
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyjamas/ui.py'...
***   File "./lib/python3.5/site-packages/pyjamas/ui.py", line 1005
    print "TODO - setAttribute __hash"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
